tests/purs/failing/OverlapAcrossModulesUnnamedInstance.out
Error found:
in module [33mOverlapAcrossModules[0m
at tests/purs/failing/OverlapAcrossModulesUnnamedInstance.purs:6:1 - 6:15 (line 6, column 1 - line 6, column 15)

  Overlapping type class instances found for
  [33m                                [0m
  [33m  OverlapAcrossModules.Class.C X[0m
  [33m                               Y[0m
  [33m                                [0m
  The following instances were found:

    [33mOverlapAcrossModules.X.cX[0m
    instance in module [33mOverlapAcrossModules[0m with type [33mC X Y[0m (line 6, column 1 - line 6, column 15)


in type class instance
[33m                                [0m
[33m  OverlapAcrossModules.Class.C X[0m
[33m                               Y[0m
[33m                                [0m

See https://github.com/purescript/documentation/blob/master/errors/OverlappingInstances.md for more information,
or to contribute content related to this error.

